[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://themes/button_theme.tres" type="Theme" id=2]
[ext_resource path="res://scenes/A_body.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/LevelTemplate.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/E_body.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/V_body.tscn" type="PackedScene" id=6]
[ext_resource path="res://fonts/PressStart2P-vaV7.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://scenes/PauseMenu.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=1]
size = 45
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 45
font_data = ExtResource( 7 )

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="PlayerPosition" type="Position2D" parent="."]
position = Vector2( 496, 270 )

[node name="EPosition" type="Position2D" parent="."]
position = Vector2( 912, 270 )

[node name="APosition" type="Position2D" parent="."]
position = Vector2( 79, 270 )

[node name="StartTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="HalfGameTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="GameTimer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[node name="LevelTemplate" parent="." instance=ExtResource( 4 )]

[node name="V_body" parent="." instance=ExtResource( 6 )]
position = Vector2( 1000, 0 )
scale = Vector2( 0.25, 0.25 )
speed = 160

[node name="E_body" parent="." instance=ExtResource( 5 )]
scale = Vector2( 0.25, 0.25 )
collision_layer = 2
max_speed = 200

[node name="A_body" parent="." instance=ExtResource( 3 )]
scale = Vector2( 0.25, 0.25 )
collision_layer = 2
max_speed = 260

[node name="ShowTimer" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -58.0
margin_top = 80.0
margin_right = 51.0
margin_bottom = 125.0
custom_fonts/font = SubResource( 1 )
text = "1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShowTimer2" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -57.0
margin_top = -91.0
margin_right = 50.0
margin_bottom = -46.0
custom_fonts/font = SubResource( 2 )
text = "1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseButton" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -59.0
margin_top = 9.0
margin_right = 51.0
margin_bottom = 36.0
theme = ExtResource( 2 )
text = "pause"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseMenu" parent="." instance=ExtResource( 8 )]
pause_mode = 2
visible = false
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="HalfGameTimer" to="." method="_on_HalfGameTimer_timeout"]
[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]
[connection signal="button_up" from="PauseButton" to="." method="_on_PauseButton_button_up"]
[connection signal="button_up" from="PauseMenu/ResumeButton" to="." method="_on_ResumeButton_button_up"]
[connection signal="button_up" from="PauseMenu/MainMenuButton" to="." method="_on_MainMenuButton_button_up"]

[editable path="PauseMenu"]
